--- a/source/sass/blocks/blog.scss
+++ b/source/sass/blocks/blog.scss
@@ -69,6 +69,17 @@
   }
 }
 
+.blog__wrap-picture {
+  @media (max-width: $tablet) {
+    width: 339px;
+    overflow: hidden;
+  }
+
+  @media (max-width: $mobile) {
+    width: 290px;
+  }
+}
+
 .blog__item img {
   background-color: var(--gold-light-03);
 
@@ -100,7 +111,8 @@
     height: 300px;
 
     object-fit: cover;
-    object-position: top;
+    object-position: 24px 20px;
+    transform: scale(1.2);
   }
 
   @media (max-width: $mobile) {
@@ -135,7 +147,7 @@
   }
 
   @media (max-width: $mobile) {
-    padding: 50px 60px;
+    padding: 47px 60px;
     width: 290px;
     min-height: 256px;
   }
@@ -164,7 +176,7 @@
 }
 
 .blog__read p {
-  margin-bottom: 10px;
+  margin-bottom: 13px;
 
   font-family: var(--poppins);
   font-weight: 500;
@@ -176,6 +188,7 @@
 }
 
 .blog__read h3 {
+  margin-bottom: 38px;
   font-family: var(--cormorant-garamond);
   font-weight: 600;
   font-size: 26px;
@@ -184,7 +197,6 @@
 }
 
 .blog__read a {
-  margin-top: auto;
   padding-bottom: 5px;
 
   font-family: var(--poppins);
