--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -4,7 +4,7 @@
   column-gap: 50px;
 
   padding-top: 80px;
-  padding-bottom: 78px;
+  padding-bottom: 76px;
 
   @media (max-width: $tablet) {
     grid-template-columns: 1fr;
@@ -46,7 +46,7 @@
   padding-top: 47px;
 
   @media (max-width: $tablet) {
-    padding-top: 53px;
+    padding-top: 57px;
   }
 
   @media (max-width: $mobile) {
@@ -66,6 +66,7 @@
 
   border: none;
   background-color: var(--transparent);
+  cursor: pointer;
 
   @media (max-width: $mobile) {
     display: none;
@@ -73,8 +74,11 @@
 }
 
 .catalog__inner {
+  margin-right: 35px;
+
   @media (max-width: $tablet) {
-    min-width: 140px;
+    margin-right: 0;
+    margin-left: 5px;
   }
 }
 
@@ -90,6 +94,7 @@
 
   border: none;
   background-color: var(--transparent);
+  cursor: pointer;
 
   &--active {
     color: var(--dark);
