--- a/source/sass/blocks/swiper-pagination.scss
+++ b/source/sass/blocks/swiper-pagination.scss
@@ -18,6 +18,9 @@
 }
 
 .swiper-mobile-pagination__button {
+  margin-right: 5px;
+  margin-left: 5px;
+
   font-weight: 500;
   font-size: 16px;
   line-height: 130%;
