--- a/source/sass/global/common.scss
+++ b/source/sass/global/common.scss
@@ -64,7 +64,7 @@
 .section__content {
   padding-top: 30px;
 
-  @media (max-width: $tablet) {
+  @media (max-width: $min-desktop) {
     justify-content: center;
   }
 }
