--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -246,6 +246,12 @@
   }
 }
 
-.header--nojs .header__toggle {
-  display: none;
+.header--nojs {
+  .header__toggle {
+    display: none;
+  }
+
+  .header__wrapper {
+    grid-template-columns: 1fr max-content;
+  }
 }
