--- a/source/sass/blocks/swiper-pagination.scss
+++ b/source/sass/blocks/swiper-pagination.scss
@@ -27,3 +27,10 @@
 
   color: var(--dark);
 }
+
+.swiper-button-next.swiper-button-disabled,
+.swiper-button-prev.swiper-button-disabled {
+  opacity: 0.35;
+  cursor: auto;
+  pointer-events: none;
+}
