--- a/source/sass/blocks/accordion.scss
+++ b/source/sass/blocks/accordion.scss
@@ -25,7 +25,7 @@
   display: flex;
   justify-content: space-between;
 
-  padding: 44px 42px;
+  padding: 44px 43px;
 
   @media (max-width: $tablet) {
     padding-left: 50px;
@@ -109,9 +109,7 @@
   padding: 10px 48px 40px;
 
   @media (max-width: $tablet) {
-    padding-left: 50px;
-    padding-right: 45px;
-    padding-top: 30px;
+    padding: 27px 45px 42px 49px;
   }
 
   @media (max-width: $mobile) {
