--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -20,9 +20,12 @@
 
 
 $desktop: 1200px;
-$min-desktop: 1199px;
+$mid-desktop: 1199px;
+$min-desktop: 1139px;
 
+$max-tablet: 1050px;
 $tablet: 1023px;
+$min-tablet: 708px;
 
 $mobile: 767px;
 $mid-mobile: 479px;
