--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,3 +27,4 @@
 @import "blocks/login.scss";
 @import "blocks/login-page.scss";
 @import "blocks/login-form.scss";
+@import "blocks/index-page.scss";
