--- a/source/sass/blocks/blog.scss
+++ b/source/sass/blocks/blog.scss
@@ -22,25 +22,23 @@
 .blog__list {
   display: grid;
   grid-template-columns: 570px 570px;
-  grid-template-rows: 300px 300px;
+  grid-template-rows: max-content max-content;
   gap: 30px;
 
-  @media (max-width: $min-desktop) {
+  @media (max-width: $mid-desktop) {
     grid-template-columns: 475px 475px;
-    grid-template-rows: 255px 255px;
     row-gap: 15px;
   }
 
   @media (max-width: $tablet) {
     grid-template-columns: 678px;
-    grid-template-rows: 300px 300px 300px;
+    grid-template-rows: max-content max-content max-content;
     row-gap: 50px;
-    padding-top: 27px;
+    padding-top: 29px;
   }
 
   @media (max-width: $mobile) {
     grid-template-columns: 290px;
-    grid-template-rows: 512px 512px 512px;
     row-gap: 40px;
     padding-top: 0;
   }
@@ -83,7 +81,7 @@
 .blog__item img {
   background-color: var(--gold-light-03);
 
-  @media (max-width: $min-desktop) {
+  @media (max-width: $mid-desktop) {
     width: 247px;
     height: 255px;
   }
@@ -101,7 +99,7 @@
 
 
 .blog__item--big-picture img {
-  @media (max-width: $min-desktop) {
+  @media (max-width: $mid-desktop) {
     width: 100%;
     height: 100%;
   }
@@ -126,7 +124,7 @@
   flex-direction: column;
   align-items: center;
 
-  padding: 65px 60px;
+  padding: 65px 60px 15px;
   width: 285px;
   min-height: 300px;
 
@@ -134,28 +132,32 @@
 
   background-color: var(--gold-light);
 
-  @media (max-width: $min-desktop) {
-    padding: 50px 30px;
+  @media (max-width: $mid-desktop) {
+    padding: 50px 30px 10px;
     width: 247px;
     min-height: 255px;
   }
 
   @media (max-width: $tablet) {
-    padding: 70px 88px;
+    padding: 68px 88px 10px;
     width: 339px;
     min-height: 300px;
   }
 
   @media (max-width: $mobile) {
-    padding: 47px 60px;
+    padding: 47px 60px 10px;
     width: 290px;
     min-height: 256px;
   }
 
   &--big-picture {
     position: absolute;
-    bottom: 0;
+    top: 330px;
     right: 0;
+
+    @media (max-width: $mid-desktop) {
+      top: 270px;
+    }
 
     @media (max-width: $tablet) {
       position: static;
