--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -6,6 +6,10 @@
   padding-top: 80px;
   padding-bottom: 76px;
 
+  @media (max-width: $min-desktop) {
+    column-gap: 0;
+  }
+
   @media (max-width: $tablet) {
     grid-template-columns: 1fr;
     grid-template-rows: auto 1fr;
@@ -14,28 +18,41 @@
 
   @media (max-width: $mobile) {
     padding-top: 40px;
-    padding-bottom: 65px;
+    padding-bottom: 66px;
   }
+}
+
+.catalog__wrap-product {
+  justify-self: center;
 }
 
 .catalog__product {
   display: grid;
   grid-template-columns: repeat(3, 270px);
-  grid-template-rows: repeat(4, 360px);
   column-gap: 30px;
-  row-gap: 15px;
+  row-gap: 36px;
+
+  @media (max-width: $mid-desktop) {
+    grid-template-columns: repeat(3, 250px);
+  }
 
   @media (max-width: $min-desktop) {
-    grid-template-columns: repeat(3, 206px);
-    grid-template-rows: repeat(4, 290px);
+    grid-template-columns: repeat(3, 230px);
     row-gap: 20px;
-    justify-content: center;
+  }
+
+  @media (max-width: $max-tablet) {
+    grid-template-columns: repeat(3, 216px);
+  }
+
+  @media (max-width: $tablet) {
+    grid-template-columns: repeat(3, 206px);
+    row-gap: 37px;
   }
 
   @media (max-width: $mobile) {
     grid-template-columns: repeat(2, 130px);
-    grid-template-rows: repeat(6, 230px);
-    row-gap: 15px;
+    row-gap: 27px;
   }
 }
 
@@ -43,15 +60,16 @@
   display: flex;
   justify-content: space-between;
 
-  padding-top: 47px;
+  padding-top: 70px;
 
   @media (max-width: $tablet) {
-    padding-top: 57px;
+    padding-top: 70px;
   }
 
   @media (max-width: $mobile) {
     justify-content: center;
-    padding-top: 25px;
+    padding-top: 40px;
+    margin-left: 40px;
   }
 }
 
@@ -75,11 +93,6 @@
 
 .catalog__inner {
   margin-right: 35px;
-
-  @media (max-width: $tablet) {
-    margin-right: 0;
-    margin-left: 5px;
-  }
 }
 
 .catalog__pagination {
