--- a/source/sass/blocks/control.scss
+++ b/source/sass/blocks/control.scss
@@ -1,5 +1,5 @@
 .control {
-  margin-top: 4px;
+  margin-top: 2px;
 }
 
 .control__range-wrap {
@@ -7,6 +7,17 @@
   margin-bottom: 13px;
   --left-width: 42px;
   --right-width: 146px;
+
+  @media (max-width: $tablet) {
+    margin-bottom: 15px;
+    --left-width: 49px;
+    --right-width: 226px;
+  }
+
+  @media (max-width: $mobile) {
+    --left-width: 22px;
+    --right-width: 163px;
+  }
 }
 
 .control__scale {
@@ -34,6 +45,11 @@
   background-color: var(--gold);
   border-radius: 50%;
   cursor: pointer;
+
+  @media (max-width: $tablet) {
+    width: 18px;
+    height: 18px;
+  }
 }
 
 .control__range .control__toggle--min {
@@ -50,26 +66,54 @@
 
 .control__price {
   display: flex;
-  justify-content: flex-end;
 
   font-weight: 500;
   font-size: 14px;
   line-height: 130%;
 
   color: var(--dark);
+
+  @media (max-width: $tablet) {
+    padding-bottom: 17px;
+  }
+
+  @media (max-width: $mobile) {
+    padding-bottom: 7px;
+  }
 }
 
 .control__price label {
   padding-left: 0;
 
+  &:first-child {
+    margin-left: 35px;
+
+    @media (max-width: $tablet) {
+      margin-left: 40px;
+    }
+
+    @media (max-width: $mobile) {
+      margin-left: 15px;
+    }
+  }
+
   &:last-child {
     margin-left: 45px;
+
+    @media (max-width: $tablet) {
+      margin-left: 115px;
+    }
+
+    @media (max-width: $mobile) {
+      margin-left: 77px;
+    }
   }
 }
 
 .control__price input {
   width: 45px;
   border: none;
+  appearance: textfield;
 
   &::placeholder {
     display: flex;
