--- a/source/sass/blocks/filter.scss
+++ b/source/sass/blocks/filter.scss
@@ -10,6 +10,13 @@
     height: 15px;
     border: 1px solid var(--gold);
     border-radius: 0;
+
+    @media (max-width: $tablet) {
+      top: 1px;
+      left: 5px;
+      width: 18px;
+      height: 18px;
+    }
   }
 
   input:checked + label::before {
@@ -77,11 +84,16 @@
 .filter__title {
   display: flex;
   justify-content: space-between;
-
   padding: 24px 16px 22px 23px;
 
   @media (max-width: $tablet) {
-    padding: 40px 40px 40px 21px;
+    padding: 34px 30px 34px 18px;
+  }
+
+  @media (max-width: $mobile) {
+    padding-top: 25px;
+    padding-bottom: 23px;
+    padding-right: 10px;
   }
 }
 
@@ -89,6 +101,10 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 130%;
+
+  @media (max-width: $tablet) {
+    font-size: 18px;
+  }
 }
 
 .filter ul {
@@ -98,6 +114,10 @@
 .filter li {
   &:not(:last-child) {
     margin-bottom: 11px;
+
+    @media (max-width: $tablet) {
+      margin-bottom: 18px;
+    }
   }
 }
 
@@ -111,6 +131,10 @@
 
   color: var(--dark);
   cursor: pointer;
+
+  @media (max-width: $tablet) {
+    font-size: 16px;
+  }
 }
 
 .filter__submit,
@@ -140,6 +164,14 @@
   margin-top: 32px;
   color: var(--white);
 
+  @media (max-width: $tablet) {
+    margin-top: 40px;
+  }
+
+  @media (max-width: $mobile) {
+    margin-top: 29px;
+  }
+
   &:hover,
   &:focus {
     color: var(--dark);
@@ -156,6 +188,10 @@
   background-color: var(--white);
 
   color: var(--dark);
+
+  @media (max-width: $mobile) {
+    margin-top: 21px;
+  }
 
   &:hover,
   &:focus {
@@ -211,6 +247,10 @@
     border: none;
     border-radius: 50%;
     cursor: pointer;
+  }
+
+  @media (max-width: $mobile) {
+    right: -11px;
   }
 }
 
