--- a/source/sass/blocks/login.scss
+++ b/source/sass/blocks/login.scss
@@ -44,6 +44,14 @@
 .login__title img {
   object-fit: cover;
   width: 100%;
+
+  @media (max-width: $tablet) {
+    height: 138px;
+  }
+
+  @media (max-width: $mobile) {
+    height: 84px;
+  }
 }
 
 .login__title h2 {
@@ -61,22 +69,28 @@
   color: var(--dark);
 
   @media (max-width: $mobile) {
-    margin-top: 35px;
+    margin-top: 37px;
     margin-bottom: 7px;
     font-size: 24px;
   }
 }
 
 .login form {
-  padding: 18px 42px 20px 48px;
+  padding: 18px 42px 20px 44px;
+
+  @media (max-width: $tablet) {
+    padding: 18px 50px 20px 50px;
+  }
 
   @media (max-width: $mobile) {
+    padding-top: 20px;
     padding-left: 15px;
     padding-right: 15px;
   }
 }
 
 .login input {
+  padding-bottom: 10px;
   width: 100%;
   height: 30px;
 
@@ -100,7 +114,15 @@
 }
 
 .login input[type="email"] {
-  margin-bottom: 35px;
+  margin-bottom: 33px;
+
+  @media (max-width: $tablet) {
+    margin-bottom: 34px;
+  }
+
+  @media (max-width: $mobile) {
+    margin-bottom: 30px;
+  }
 }
 
 .login a {
@@ -108,6 +130,7 @@
   justify-content: flex-end;
 
   margin-top: 7px;
+  margin-right: 3px;
 
   font-weight: 500;
   font-size: 12px;
@@ -116,7 +139,8 @@
   color: var(--gray);
 
   @media (max-width: $mobile) {
-    margin-top: 2px;
+    margin-top: 6px;
+    margin-right: 0;
   }
 }
 
@@ -135,7 +159,7 @@
   cursor: pointer;
 
   @media (max-width: $mobile) {
-    margin-top: 35px;
+    margin-top: 36px;
     width: 240px;
   }
 
@@ -167,6 +191,7 @@
 .login__account a {
   display: initial;
   margin-left: 5px;
+  margin-right: 6px;
 
   font-weight: 500;
   font-size: 14px;
@@ -192,6 +217,10 @@
   border: none;
   cursor: pointer;
 
+  @media (max-width: $tablet) {
+    right: 15px;
+  }
+
   @media (max-width: $mobile) {
     top: 9px;
     right: 6px;
@@ -208,7 +237,19 @@
 }
 
 .login__close svg {
+  width: 14px;
+  height: 14px;
   color: var(--dark);
+
+  @media (max-width: $tablet) {
+    width: 20px;
+    height: 20px;
+  }
+
+  @media (max-width: $mobile) {
+    width: 14px;
+    height: 14px;
+  }
 }
 
 @keyframes modal-open {
