--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -62,3 +62,9 @@ h3,
 p {
   margin: 0;
 }
+/* stylelint-disable */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+/* stylelint-enable */
