--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -14,6 +14,7 @@
     grid-template-columns: 1fr;
     grid-template-rows: auto 1fr;
     padding-top: 50px;
+    padding-bottom: 75px;
   }
 
   @media (max-width: $mobile) {
