--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -7,16 +7,20 @@
   padding-bottom: 50px;
 
   @media (max-width: $tablet) {
-    padding-top: 22px;
+    padding-top: 17px;
   }
 
   @media (max-width: $mobile) {
-    padding-top: 10px;
+    padding-top: 8px;
   }
 }
 
 .faq h2 {
   margin-bottom: 45px;
+
+  @media (max-width: $tablet) {
+    margin-bottom: 48px;
+  }
 
   @media (max-width: $mobile) {
     margin-bottom: 30px;
