--- a/css/style.css
+++ b/css/style.css
@@ -1168,7 +1168,10 @@ input::-webkit-inner-spin-button {
   font-weight: 500;
   font-size: 16px;
   line-height: 130%;
-  color: var(--dark); }
+  color: var(--dark);
+  background-color: var(--transparent);
+  border: none;
+  border-radius: 0; }
 
 .swiper-button-next.swiper-button-disabled,
 .swiper-button-prev.swiper-button-disabled {
@@ -1381,7 +1384,8 @@ input::-webkit-inner-spin-button {
     width: 290px; } }
 
 .blog__item img {
-  background-color: var(--gold-light-03); }
+  background-color: var(--gold-light-03);
+  object-fit: cover; }
   @media (max-width: 1199px) {
     .blog__item img {
       width: 247px;
