--- a/source/sass/blocks/blog.scss
+++ b/source/sass/blocks/blog.scss
@@ -79,21 +79,20 @@
 }
 
 .blog__item img {
+  height: 100%;
   background-color: var(--gold-light-03);
+  object-fit: cover;
 
   @media (max-width: $mid-desktop) {
     width: 247px;
-    height: 255px;
   }
 
   @media (max-width: $tablet) {
     width: 339px;
-    height: 300px;
   }
 
   @media (max-width: $mobile) {
     width: 290px;
-    height: 256px;
   }
 }
 
@@ -108,7 +107,6 @@
     width: 339px;
     height: 300px;
 
-    object-fit: cover;
     object-position: 24px 20px;
     transform: scale(1.2);
   }
@@ -152,12 +150,8 @@
 
   &--big-picture {
     position: absolute;
-    top: 330px;
+    bottom: 0;
     right: 0;
-
-    @media (max-width: $mid-desktop) {
-      top: 270px;
-    }
 
     @media (max-width: $tablet) {
       position: static;
