--- a/css/style.css
+++ b/css/style.css
@@ -1384,20 +1384,18 @@ input::-webkit-inner-spin-button {
     width: 290px; } }
 
 .blog__item img {
+  height: 100%;
   background-color: var(--gold-light-03);
   object-fit: cover; }
   @media (max-width: 1199px) {
     .blog__item img {
-      width: 247px;
-      height: 255px; } }
+      width: 247px; } }
   @media (max-width: 1023px) {
     .blog__item img {
-      width: 339px;
-      height: 300px; } }
+      width: 339px; } }
   @media (max-width: 767px) {
     .blog__item img {
-      width: 290px;
-      height: 256px; } }
+      width: 290px; } }
 
 @media (max-width: 1199px) {
   .blog__item--big-picture img {
@@ -1408,7 +1406,6 @@ input::-webkit-inner-spin-button {
   .blog__item--big-picture img {
     width: 339px;
     height: 300px;
-    object-fit: cover;
     object-position: 24px 20px;
     transform: scale(1.2); } }
 
@@ -1443,11 +1440,8 @@ input::-webkit-inner-spin-button {
       min-height: 256px; } }
   .blog__read--big-picture {
     position: absolute;
-    top: 330px;
+    bottom: 0;
     right: 0; }
-    @media (max-width: 1199px) {
-      .blog__read--big-picture {
-        top: 270px; } }
     @media (max-width: 1023px) {
       .blog__read--big-picture {
         position: static;
